project-management/k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: project-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: database
        image: postgres:14
        ports:
        - containerPort: 5432
