project-management/k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: project-management
spec:
  selector:
    app: database
  ports:
  - protocol: TCP
    port: 5432
